# Harjoitustyo

./: README.md  pyproject.toml
Dokumentit/: Toteutusdokumentti.md  testaus  testaus.md
src/: AI.py  game.py  play.py
src/tests/: Connect4AI_test.py  game_test.py
