[project]
name = "connect4ai"
version = "1"
description = "Connect 4 game and AI"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "me"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "poetry (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "coverage (>=7.11.1,<8.0.0)"
]
